--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.log
 *.tmp
 *.tmp.*
+*.zip
 log.txt
 *.sublime-project
 *.sublime-workspace
@@ -26,9 +27,10 @@ platforms/
 plugins/
 plugins/android.json
 plugins/ios.json
-www/
 $RECYCLE.BIN/
 
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+
+www
