--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
         "@ionic-native/status-bar": "3.10.2",
         "@ionic-native/toast": "^3.12.1",
         "@ionic/storage": "2.0.1",
-        "cordova-plugin-handpoint": "file:///Users/ecunado/handpoint/cordova-plugin-handpoint",
-        "cordova-plugin-x-toast": "^2.6.0",
-        "ionic-angular": "3.3.0",
-        "ionicons": "3.0.0",
-        "rxjs": "5.1.1",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.11",
         "cordova-plugin-console": "1.0.5",
         "cordova-plugin-device": "1.1.4",
+        "cordova-plugin-handpoint": "https://github.com/handpoint/cordova-plugin-handpoint.git",
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.2",
         "cordova-plugin-whitelist": "1.3.1",
-        "ionic-plugin-keyboard": "~2.2.1"
+        "cordova-plugin-x-toast": "^2.6.0",
+        "ionic-angular": "3.3.0",
+        "ionic-plugin-keyboard": "~2.2.1",
+        "ionicons": "3.0.0",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.11"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
@@ -49,13 +49,13 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-x-toast": {},
-            "cordova-plugin-handpoint": {},
             "cordova-plugin-console": {},
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-handpoint": {}
         }
     }
 }
