--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "@ionic/storage": "2.0.1",
         "cordova-plugin-console": "1.0.5",
         "cordova-plugin-device": "1.1.4",
-        "cordova-plugin-handpoint": "https://github.com/handpoint/cordova-plugin-handpoint.git",
+        "cordova-plugin-handpoint": "git+https://github.com/handpoint/cordova-plugin-handpoint.git",
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.2",
         "cordova-plugin-whitelist": "1.3.1",
