--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
         "cordova-plugin-device": "1.1.4",
         "cordova-plugin-handpoint": "git+https://github.com/handpoint/cordova-plugin-handpoint.git",
         "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-sqlite-2": "^1.0.4",
         "cordova-plugin-statusbar": "2.2.2",
         "cordova-plugin-whitelist": "1.3.1",
         "cordova-plugin-x-toast": "^2.6.0",
         "ionic-angular": "3.3.0",
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
+        "pouchdb": "^6.2.0",
+        "pouchdb-adapter-cordova-sqlite": "^2.0.2",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.11"
@@ -62,6 +65,7 @@
                 "ANDROID_HOST": " ",
                 "ANDROID_PATHPREFIX": "/"
             },
+            "cordova-plugin-sqlite-2": {},
             "cordova-plugin-handpoint": {}
         }
     }
