--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
         "@ionic-native/splash-screen": "3.10.2",
         "@ionic-native/status-bar": "3.10.2",
         "@ionic-native/toast": "^3.12.1",
+        "@ionic-native/vibration": "^4.5.3",
         "@ionic/storage": "2.0.1",
+        "angular2-moment": "^1.8.0",
         "cordova-plugin-console": "1.0.5",
         "cordova-plugin-customurlscheme": "git+https://github.com/EddyVerbruggen/Custom-URL-scheme.git",
         "cordova-plugin-device": "1.1.4",
-        "cordova-plugin-handpoint": "git+https://github.com/handpoint/cordova-plugin-handpoint.git",
+        "cordova-plugin-handpoint": "file:../cordova-plugin-handpoint",
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.2",
+        "cordova-plugin-vibration": "^3.0.1",
         "cordova-plugin-whitelist": "1.3.1",
         "cordova-plugin-x-toast": "^2.6.0",
         "ionic-angular": "3.3.0",
@@ -62,7 +65,8 @@
                 "ANDROID_HOST": " ",
                 "ANDROID_PATHPREFIX": "/"
             },
-            "cordova-plugin-handpoint": {}
+            "cordova-plugin-handpoint": {},
+            "cordova-plugin-vibration": {}
         }
     }
 }
