--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "cordova-plugin-console": "1.0.5",
         "cordova-plugin-customurlscheme": "git+https://github.com/EddyVerbruggen/Custom-URL-scheme.git",
         "cordova-plugin-device": "1.1.4",
-        "cordova-plugin-handpoint": "file:../cordova-plugin-handpoint",
+        "cordova-plugin-handpoint": "^1.2.0",
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.2",
         "cordova-plugin-vibration": "^3.0.1",
@@ -66,8 +66,8 @@
                 "ANDROID_HOST": " ",
                 "ANDROID_PATHPREFIX": "/"
             },
-            "cordova-plugin-handpoint": {},
-            "cordova-plugin-vibration": {}
+            "cordova-plugin-vibration": {},
+            "cordova-plugin-handpoint": {}
         }
     }
 }
