--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "ionicons": "3.0.0",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.11"
+        "zone.js": "0.8.11",
+        "cordova-android": "6.4.0"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
@@ -68,6 +69,10 @@
             },
             "cordova-plugin-vibration": {},
             "cordova-plugin-handpoint": {}
-        }
+        },
+        "platforms": [
+            "android",
+            "ios"
+        ]
     }
 }
